--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <p1>
             This is my first file...
         </p1>
+        <p2>
+            This is my second file...
+        </p2>
     </body>
 
 </html>
